What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

October 12, 2007
* [FOD] Changed the way the image structure is allocated when the decoding parameters include some resolutions to discard. 
        This should have a significant impact for the decoding of huge images when some resolutions are discarder (-r parameter)
        Warning: The output image size is now reduced when discarding resolutions !

October 10, 2007
* [FOD] Patch from Callum Lewick. Clean up of j2klib.h for the aligned malloc stuff. 
        It makes it work right with mingw, as _mm_malloc() isn't a macro, attempts to pave the way to using cmake to check for this stuff and combines a patch from Dana Fagerstrom at Sun that makes it use memalign() on Solaris
        convert.c: Changed some error comments for TIFF images

September 27, 2007
* [FOD] Patch from Callum Lewick. Fixed dwt.c where an alignment in buffer was problematic under x86_64.

September 25, 2007
* [Mathieu Malaterre] BUG: Fix previous patch from Callum Lerwick. I have no
    clue what CMAKE_INSTALL_LIBDIR refers too. Bump up cmake 2.2 restriction to
    cmake 2.4 because of previous patch (not backward compatible). Properly set the SOVERSION in a cross plateform way (yes WIN32 is a platform)

September 19, 2007
* [Parvatha] Fixed issues with generation of SOP marker. 

September 18, 2007
* [Parvatha] Fixed issues with Reading and Writing TIF images in convert.c to avoid segmentation fault. 
* [Parvatha] Fixed issues relating to using user specified rates for CINEMA option for multiple images.

September 17, 2007
* [FOD] Fixed issues with cstr_info when codestream has components with different number of resolutions. 
! [FOD] OpenJPEG library interface modified to retain compatibility with version 1.2 

September 12, 2007
* [FOD] Patch from Callum Lerwick.
		Fixed the library linking so it links with the soversion properly set. 
		Fixes up the install targets so that it interacts properly with RPM. 